# dind-example

./: .gitignore  README.md  pyproject.toml
orchestrator/: Dockerfile  test_entrypoint.sh  unified_entrypoint.sh
src/doit/: __init__.py  cli.py  orchestrator.py
tests/: conftest.py  test_orchestrator.py
tests/artifacts/test_scenario_1/: test_artifact.txt
tests/artifacts/test_scenario_1/nested/dir/: data.txt
tests/artifacts/test_scenario_2/: test_artifact.txt
tests/artifacts/test_scenario_2/nested/dir/: data.txt
tests/artifacts/test_scenario_3/: test_artifact.txt
tests/artifacts/test_scenario_3/nested/dir/: data.txt
tests/artifacts/test_scenario_4/: test_artifact.txt
tests/artifacts/test_scenario_4/nested/dir/: data.txt
worker/: Dockerfile  run.sh  run_test.sh
